Create Api Result <Common AspNetCore>

--- a/Shop/Shop.Api/Shop.Api.csproj
+++ b/Shop/Shop.Api/Shop.Api.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Common\Common.AspNetCore\Common.AspNetCore.csproj" />
     <ProjectReference Include="..\Shop.Config\Shop.Config.csproj" />
   </ItemGroup>
 
