--- a/Shop/Shop.Api/appsettings.json
+++ b/Shop/Shop.Api/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=.;Initial Catalog=EShop_DB;Integrated Security=true;MultipleActiveResultSets=true;TrustServerCertificate=True"
+
+  }
 }
