--- a/Shop/Shop.Api/appsettings.json
+++ b/Shop/Shop.Api/appsettings.json
@@ -8,6 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=.;Initial Catalog=EShop_DB;Integrated Security=true;MultipleActiveResultSets=true;TrustServerCertificate=True"
-
+  },
+  "JwtConfig": {
+    "SignInKey": "16D9BBF8-FA00-4D89-9BB5-99610E95BdsadasdasdA70-dasdsa",
+    "Issuer": "Eshop.com",
+    "Audience": "Eshop-api"
   }
 }
