--- a/Shop/Shop.Api/appsettings.json
+++ b/Shop/Shop.Api/appsettings.json
@@ -18,6 +18,7 @@
     "EnableEndpointRateLimiting": false,
     "StackBlockedRequests": false,
     "RealIpHeader": "X-Real-IP",
+    //"IpWhitelist": [ "127.0.0.1", "::1/10", "192.168.0.0/24" ],
     "ClientIdHeader": "X-ClientId",
     "HttpStatusCode": 429,
     "GeneralRules": [
